# sherlock

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
case_files/: ex.txt  test.txt  test_case.txt
case_files/test_dir/: names.txt
case_files/txt_files/: case_001_thornfield_manor.txt  case_002_finch_disappearance.txt  case_norwood_builder.txt
docs/diagrams/architecture_diagrams/: Architecture_Diagram.drawio
docs/diagrams/grounding_logic/: grounding_logic.drawio
docs/diagrams/query_lifecycle/: query_lifecycle.drawio
docs/novels/: case_dancing_men.txt
src/: agent.py  chunk.py  chunker.py  debug.py  embedding.py  generation.py  ingest.py  ingestion.py  main.py  prompts.py  retrieval.py  system.py  vector_store.py
src/chroma_vector_store/: chroma.sqlite3
src/static/: app.js  index.html  style.css
tests/: conftest.py  debug.py  test.py  test_api.py  test_grounding.py  test_ingestion.py  test_offline.py
