[project]
name = "sherlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain[google-genai]>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.3",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pypdf>=6.12.0",
    "pytest>=9.0.3",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: tests that call the live Google API (opt-in; run with `pytest -m integration`)",
]
addopts = "-m 'not integration'"
